...

    <string name="edit_card_set_screen_add_flashcard_dialog_title">Add flashcard</string>
    <string name="edit_card_set_screen_update_flashcard_dialog_title">Update flashcard</string>
    <string name="edit_card_set_screen_edit_flashcard_dialog_obverse_label">Question</string>
    <string name="edit_card_set_screen_edit_flashcard_dialog_reverse_label">Answer</string>

    <string name="learn_card_set_screen_learning_finished_title">Congratulations!!!</string>>
    <string name="learn_card_set_screen_learning_go_to_card_set_list">Go to card set list</string>>
    <string name="learn_card_set_screen_success_toast">Yaay!!</string>
    <string name="learn_card_set_screen_your_answer">Your Answer</string>
    <string name="learn_card_set_screen_proper_answer">Proper Answer</string>

    <string name="test_card_set_screen_test_finished_title">Congratulations!!!</string>>
    <string name="test_card_set_screen_test_finished_score">You have learned %1$d/%2$d cards</string>

    <string name="practice_settings_menu_practice_mode_click">Know / don\'t know</string>
    <string name="practice_settings_menu_practice_mode_write">Write</string>
    <string name="practice_settings_menu_case_sensitive">Case sensitive</string>

    <!-- generic messages -->
    <string name="database_save_error_message">Error while saving your set</string>
    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
...
    <!-- WCAG-->
    <string name="wcag_action_add">Add</string>
    <string name="wcag_description_success">success</string>
    <string name="wcag_action_save">save</string>
    <string name="wcag_button_not_learned_description">not learned</string>
    <string name="wcag_button_learned_description">learned</string>
    <string name="wcag_button_settings_description">Settings</string>

</resources>
