...
        verticalArrangement = Arrangement.Center
    ) {
        Text(
            modifier = Modifier
                .fillMaxWidth()
                .padding(2.dp)
                .testTag("learningProgress"),
            text = stringResource(R.string.progress, learned, setSize),
            textAlign = TextAlign.Start,
        )
        Box(
            modifier = Modifier
                .fillMaxWidth()
...
