...
        verticalAlignment = Alignment.CenterVertically
    ) {
        TextField(
            modifier = Modifier
                .weight(1.0f)
                .padding(end = 4.dp)
                .testTag("answerTextField"),

            value = answer,
            onValueChange = { answer = it },
            keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
            keyboardActions = KeyboardActions(
                onDone = {
...
